# nixcfg-rs

./: .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  deny.toml  flake.nix  release-plz.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release-plz.yml
example-mycel/: Cargo.toml  schema.json
example-mycel/src/: main.rs
nix/: packages.nix
nixcfg/: CHANGELOG.md  Cargo.toml  README.md
nixcfg-derive/: CHANGELOG.md  Cargo.toml  README.md
nixcfg-derive/src/: lib.rs
nixcfg/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
