[workspace]
members = ["nixcfg", "nixcfg-derive", "example-mycel", "xtask"]
resolver = "2"

[workspace.metadata.crane]
name = "nixcfg-rs"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["rowan amber-jones <roarch@proton.me>"]
repository = "https://github.com/mushrowan/nixcfg-rs"
homepage = "https://github.com/mushrowan/nixcfg-rs"
readme = "README.md"
keywords = ["nix", "nixos", "config", "schema", "json-schema"]
categories = ["config"]
