[package]
name = "example-mycel"
description = "demo: emit a nixcfg schema from a Config struct"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "example-mycel"
path = "src/main.rs"

[dependencies]
nixcfg-rs = { path = "../nixcfg" }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
