[package]
name = "nixcfg-rs-derive"
description = "derive macro for nixcfg-rs - cuts schemars extend boilerplate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[lib]
# library-facing name stays nixcfg_derive regardless of the crates.io
# package name so the re-export from nixcfg (lib) stays clean
name = "nixcfg_derive"
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
