[package]
name = "nixcfg-rs"
description = "bridge config structs to NixOS module options via JSON Schema"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
# keep the library-facing name as `nixcfg` so consumer code can write
# `use nixcfg::...` even though the crates.io package is nixcfg-rs
name = "nixcfg"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
nixcfg-rs-derive = { version = "0.3.0", path = "../nixcfg-derive" }
